--- a/src/components/SettingsView.module.css
+++ b/src/components/SettingsView.module.css
@@ -1,6 +1,9 @@
 .container {
     margin-left: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 20px;    
+    display: flex;
+    flex-direction: column;
+    place-self: self-start;
 }
 
 .content-container {
@@ -34,4 +37,22 @@
 
 .clear-button:hover {
     background-color: rgb(30 80 190);
+}
+
+.randomize-button {
+    color: white;
+    background-color: rgb(243, 190, 0);
+}
+
+.randomize-button:hover {
+    background-color: rgb(223, 170, 0);
+}
+
+.generate-button {
+    color: white;
+    background-color: rgb(0, 192, 10);
+}
+
+.generate-button:hover {
+    background-color: rgb(0, 172, 0);
 }
